Fixed drop-down appearing behind content.

--- a/assets/styles/bootstrap-tweak.css
+++ b/assets/styles/bootstrap-tweak.css
@@ -1,11 +1,12 @@
 body {
-    background: #f5f5f5;
-    background-image: url("../images/concrete-texture.png");
-    color: #777777;
+    padding-top: 65px;
+    padding-bottom: 65px;
 }
 
 body {
-    padding-bottom: 65px;
+    background: #f5f5f5;
+    background-image: url("../images/concrete-texture.png");
+    color: #777777;
 }
 
 section,
@@ -85,12 +86,16 @@ aside ul {
     height: 76px;
 }
 
+
+/* .navbar-default {
+} */
+
 .navbar-default .navbar-header .navbar-brand {
     margin-left: 0;
 }
 
 ul.nav.navbar-nav.navbar-right {
-    padding: 10px 0;
+    margin: 10px -15px;
 }
 
 
